# glucocare

./: .gitignore  .vercelignore  README.md  components.json  next.config.ts  package-lock.json  package.json  requirements.txt  vercel.json
api/: .vercelignore  model_service.py  routes.py
api/api.egg-info/: SOURCES.txt
prisma/: schema.prisma  seed.ts
prisma/migrations/20260619074517_init/: migration.sql
prisma/migrations/20260620110511_clerk_integration/: migration.sql
prisma/migrations/20260621012818_add_organization_membership/: migration.sql
prisma/migrations/20260621120000_add_assessment_appointment_diagnosis/: migration.sql
py_service/: pyproject.toml
py_service/api.egg-info/: PKG-INFO  top_level.txt
src/app/: globals.css  layout.tsx  page.tsx
src/app/admin/: layout.tsx  page.tsx
src/app/admin/menus/: page.tsx
src/app/appointments/: layout.tsx  page.tsx
src/app/assessment/: layout.tsx  page.tsx
src/app/dashboard/: layout.tsx
src/app/diagnose/: layout.tsx  page.tsx
src/app/guidelines/: page.tsx
src/app/privacy/: page.tsx
src/app/records/: layout.tsx
src/app/telemedicine/: layout.tsx  page.tsx
src/components/admin/: admin-dashboard.tsx  breadcrumb.tsx  menus-manager.tsx  roles-manager.tsx  sidebar.tsx  template.tsx  users-manager.tsx
src/components/appointments/: appointments-list.tsx
src/components/assessment/: weekly-assessment-form.tsx
src/lib/: api-client.ts  api-response.ts  clerk-webhook.ts  flask-url.ts  glucose-evaluate.ts  ml-model.ts  prisma.ts  rbac.ts  require-auth.ts  require-page-auth.tsx
src/types/: api.ts
(+55 files in other folders)
