[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "flask==3.0.3",
  "flask-cors==4.0.1",
  "pandas==2.2.2",
  "scikit-learn==1.5.0",
  "numpy==1.26.4",
]

[tool.setuptools]
py-modules = ["index", "routes", "model_service"]